--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,4 +19,9 @@
         <item name="android:textSize">24sp</item>
         <item name="android:layout_marginStart">5dp</item>
     </style>
+
+    <style name="SeeAllButton">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:textColor">#4189E1</item>
+    </style>
 </resources>
