--- a/app/src/main/res/layout/layout_content_v_box.xml
+++ b/app/src/main/res/layout/layout_content_v_box.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/v_content_box_cl_main"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#000000">
 
     <TextView
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:textColor="#696969"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/v_content_box_tv_year"
         app:layout_constraintTop_toTopOf="@+id/v_content_box_tv_year" />
 
@@ -22,6 +23,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
         android:textColor="#696969"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/v_content_box_iv_poster"
         app:layout_constraintTop_toBottomOf="@+id/v_content_box_tv_title" />
 
